@@ -1,3 +1,13 @@
+2011-01-24  Olivier Paquet  <olivier.paquet@gmail.com>
+
+	* libtiff/{tif_dir.{h,c}, tif_dirinfo.c, tif_dirread.c, tif_dirwrite.c,
+	tif_print.c, tiff.h, tiffiop.h} : Added support for
+	TIFFTAG_SMINSAMPLEVALUE and TIFFTAG_SMAXSAMPLEVALUE to have different
+	values for each sample. Presents the min/max of all samples by default for
+	compatibility. TIFFSetField/TIFFGetField can be made to handle those tags
+	as arrays by changing the new TIFFTAG_PERSAMPLE pseudo tag.
+	http://www.asmail.be/msg0055458208.html
+
 2011-01-06  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_pixarlog.c: Note that tif_rawcc/tif_rawcp are not 
